--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://drive.usercontent.google.com/download?id=1ShW-yr1MU-5LAxSx-BTYxwpEye1tDKXK&export=download&authuser=0&confirm=t&uuid=18d574f7-b9b5-4a91-9c8c-17c43d608225&at=ALoNOgnGyyKG64VWwNtv-WvZll0c:1748251968086'"
               >
                 Live Demo
               </button>
