--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Cody-aditya/Notebook.git'"
               >
                 Github
               </button>
