--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Aaditya-Kumar-Gupta/Expense-Manager/releases/download/v1.0.0/ExpenseManager-1.0.exe'"
               >
                 Live Demo
               </button>
@@ -342,13 +342,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/ISHDEEP-CHANDIGARHUNIVERSITY/test-a1-Cody-aditya.git'"
+                onclick="location.href='https://github.com/Aaditya-Kumar-Gupta/Real-Time-Weather-App.git'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="alert('Coming Soon')"
+                onclick="location.href='https://real-time-weather-app-k71b.onrender.com'"
               >
                 Live Demo
               </button>
